fix scaling of blog page on small screens

--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -55,6 +55,13 @@
   transform-style: preserve-3d;
 }
 
+.innerCard h4 {
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .animatedCard:hover .innerCard {
   transform: rotateY(180deg);
 }
@@ -103,6 +110,11 @@
   .blogList > div:nth-child(6),
   .blogList > div:nth-child(7) {
     display: none;
+  }
+
+  .blogCard a img {
+    width: 100%;
+    height: 100%;
   }
 }
 
